@@ -10,6 +10,7 @@ Date: ??.??.????
     - Fix crash when player joins lobby during active game.
     - Fix crash when player joins lobby during active game.
     - Fix possible crash in collision when player character is killed. Character is now invincible!
+    - Fix one player getting points accidentally when nobody won the round.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 04. 11. 2021
